--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://lpla1002.github.io/movie_app_2021"
+  "homepage": "https://lpla1002.github.io/movie_app_2021/"
 }
